Added dropbox script to retrieve status

--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -17,7 +17,7 @@ markup=none
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 #instance=wlan0
-color=#ffa64d
+color=#85e085
 interval=10
 separator=false
 
@@ -36,35 +36,22 @@ interval=1
 signal=10
 command=/usr/share/i3blocks/volume 5 pulse
 
-
-# CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-[cpu_usage]
-label=CPU
-interval=10
-min_width=CPU: 100.00%
-#separator=false
-
-#[load_average]
-#interval=10
-
-# Battery indicator
-#
-# The battery instance defaults to 0.
 [battery]
 label=Battery status
 #label=⚡
 #instance=1
 interval=15
 
-# Date Time
-#
+
+[dropbox]
+#label=Dropbox
+interval=3
+
+
 [time]
-command=date '+%d-%m-%Y %H:%M'
-interval=5
-label=Today is
+#command=date '+%d-%m-%Y %H:%M'
+interval=15
+#label=time
 
 # Generic media player support
 #
