--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -17,7 +17,7 @@ markup=none
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 #instance=wlan0
-color=#85e085
+color=#00ff00
 interval=10
 separator=false
 
