--- a/.i3/config
+++ b/.i3/config
@@ -37,12 +37,13 @@ bindsym $mod+Shift+q kill
 
 ################################
 # colors
-set $bg-color 	         #2f343f
+set $bg-color 	         #313742
+set $bg-color-alt        #cc7400
 set $inactive-bg-color   #2f343f
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
-set $active-rofi-color   #ffa64d
+set $active-rofi-color   #FF7400
 ################################
 
 
@@ -52,7 +53,7 @@ set $active-rofi-color   #ffa64d
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+d exec rofi -show run -opacity "80" -bw 0 -bg "#000000" -fg "$active-rofi-color" -hlbg "$active-rofi-color"  -opacity "1" -font SSFD\ 12 -lines 20 -columns 5 -location 0 -padding 500 -width 100 
+bindsym $mod+d exec rofi -show run -opacity "75" -bw 0 -bg "#000000" -fg "$active-rofi-color" -hlbg "$active-rofi-color" -hlfg "#000000"  -opacity "1" -font SSFD\ 12 -lines 20 -columns 6 -location 0 -padding 500 -width 100
 
 # change focus
 bindsym $mod+j focus leftq
@@ -105,9 +106,9 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # workspaces
-set $workspace1 "Internet"
-set $workspace2 "Terminal"
-set $workspace3 "Work"
+set $workspace1 "1:internet"
+set $workspace2 "2:terminal"
+set $workspace3 "3:work"
 
 
 # switch to workspace
@@ -173,7 +174,7 @@ bindsym $mod+r mode "resize"
 
 # window colors
 #                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.focused          $bg-color           $bg-color	      $text-color          #00ff00
 client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
 client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
@@ -192,7 +193,7 @@ bar {
 		background $bg-color
 	    	separator #757575
 		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
+		focused_workspace  $bg-color          $bg-color-alt      $text-color
 		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
 		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
 	}
@@ -200,10 +201,13 @@ bar {
 
 # wallpaper
 exec_always feh --bg-scale wall.jpg
-exec dropbox start
+exec_always dropbox start
 
 exec_always compton # -f -D 1
 exec --no-startup-id "i3-msg 'workspace Work; append_layout /home/jorge/.i3/workspace-Work.json'"
+
+bindsym $mod+Print exec scrot $HOME/Imágenes/Capturas/`date +%Y-%m-%d_%H:%M:%S`.png
+
 
 # Pulse Audio controls
 set $sink `pactl list short sinks | grep RUNNING | cut -f1`
@@ -223,6 +227,8 @@ bindsym XF86AudioPrev exec playerctl previous
 
 ####################################
 set $Locker i3lock && sleep 1
+
+#bindsym $mod+Shift+x exec ~/.i3/i3-exit
 
 set $mode_system What do you want to do? (Shift+s) shutdown, System (b)lock, (l)ogout, (s)uspend, (h)ibernate, (r)eboot or ESC
 mode "$mode_system" {
