--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -1,94 +1,39 @@
 # i3blocks config file
-
-# Global properties
-#
-# The top properties below are applied to every block, but can be overridden.
-# Each block command defaults to the script name to avoid boilerplate.#
-# command=/usr/share/i3blocks/$BLOCK_NAME
-
 command=.i3/scripts/$BLOCK_NAME
 
+# global settings
+full_text=〉
+separator=false
 separator_block_width=15
 markup=none
 
-# Network interface monitoring
-#
-# If the instance is not specified, use the interface used for default route.
-# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
-#instance=wlan0
-color=#00ff00
+
+[battery]
+label=⚡
+interval=15
+
+
+[temperature]
 interval=10
-separator=false
 
 
-# Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
 [volume]
-label=Volume
-#label=♪
+label=♪
 instance=Master
-#instance=PCM
 interval=1
 signal=10
 command=/usr/share/i3blocks/volume 5 pulse
 
-[battery]
-label=Battery status
-#label=⚡
-#instance=1
-interval=15
+
+[iface]
+color=#00ff00
+interval=30
+separator=false
 
 
 [dropbox]
-#label=Dropbox
 interval=3
 
 
 [time]
-#command=date '+%d-%m-%Y %H:%M'
 interval=15
-#label=time
-
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=spotify
-#interval=5
-#signal=10
-
-# OpenVPN support
-#
-# Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
-
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
-
-# Key indicators
-#
-# Add the following bindings to i3 config file:
-#
-# bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-# bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
-
-#[keyindicator]
-#instance=NUM
-#interval=once
-#signal=11
