--- a/.i3/config
+++ b/.i3/config
@@ -53,7 +53,7 @@ set $active-rofi-color   #FF7400
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+d exec rofi -show run -opacity "75" -bw 0 -bg "#000000" -fg "$active-rofi-color" -hlbg "$active-rofi-color" -hlfg "#000000"  -opacity "1" -font SSFD\ 12 -lines 20 -columns 6 -location 0 -padding 500 -width 100
+bindsym $mod+d exec rofi -show run -opacity "75" -bw 0 -bg "#000000" -fg "$active-rofi-color" -hlbg "$active-rofi-color" -hlfg "#000000" -font SSFD\ 12 -lines 20 -columns 6 -location 0 -padding 500 -width 100
 
 # change focus
 bindsym $mod+j focus leftq
