--- a/.config/i3/config
+++ b/.config/i3/config
@@ -12,13 +12,14 @@
 set $mod Mod4
 
 # i3gaps
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 1 
 smart_gaps on
 smart_borders on
 
 gaps inner 8 
 gaps outer 2 
 
+new_window normal 
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -98,10 +99,15 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# workspaces
+set $workspace1 "1:internet"
+set $workspace2 "2:work"
+set $workspace3 "3:terminal"
+
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
+bindsym $mod+1 workspace $workspace1
+bindsym $mod+2 workspace $workspace2
+bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -111,9 +117,9 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+1 move container to workspace $workspace1
+bindsym $mod+Shift+2 move container to workspace $workspace2
+bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
@@ -131,8 +137,16 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 
 ##################### colors ###############################
-set $bg-main #002b36
+set $bg-main 	#002b36
+set $text-color	#f3f3f5
+set $sol-green	#859900
+set $solar-red	#dc322f
+set $bg-bar	#222222
+set $base3-white #fdf6e3	
 ############################################################
+
+
+
  
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -160,16 +174,24 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# window colors
+# attr			border		bg		text		indicator
+client.focused		$sol-green	$sol-green	$bg-main	$solar-green
+#client.unfocused
+#client.focused_inactive
+#client.urgent
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
         tray_output none # disable system tray icons
 	colors {
-		background $bg-main
+		background $bg-bar 
+                #                  border             background         text
+		focused_workspace  $bg-bar		$sol-green	$bg-bar
+		inactive_workspace $bg-bar		$bg-bar		$base3-white
+		urgent_workspace   $bg-bar		$solar-red	$base3-white
 	}
 }
-
-# wallpaper
-#exec_always feh -bg-scale wall.jpg
 
