--- a/.config/i3/config
+++ b/.config/i3/config
@@ -142,8 +142,10 @@ set $text-color	#f3f3f5
 set $sol-green	#859900
 set $solar-red	#dc322f
 set $bg-bar	#222222
-set $base3-white #fdf6e3	
-############################################################
+set $base3-white #fdf6e3
+set $electric-blue #00adee
+set $grayish-white #778899
+#############################################################
 
 
 
@@ -176,7 +178,7 @@ bindsym $mod+r mode "resize"
 
 # window colors
 # attr			border		bg		text		indicator
-client.focused		$sol-green	$sol-green	$bg-main	$solar-green
+client.focused		$electric-blue	$electric-blue	$bg-main	$electric-blue
 #client.unfocused
 #client.focused_inactive
 #client.urgent
@@ -189,8 +191,8 @@ bar {
 	colors {
 		background $bg-bar 
                 #                  border             background         text
-		focused_workspace  $bg-bar		$sol-green	$bg-bar
-		inactive_workspace $bg-bar		$bg-bar		$base3-white
+		focused_workspace  $bg-bar		$bg-bar		$electric-blue
+		inactive_workspace $bg-bar		$bg-bar		$grayish-white
 		urgent_workspace   $bg-bar		$solar-red	$base3-white
 	}
 }
