--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -1,7 +1,22 @@
+# xbindkeys configuration file
+
 # Brightness Up
-"xbacklight -inc 10"
+"xbacklight -inc 4"
  XF86MonBrightnessUp
 
 # Brightness Down
-"xbacklight -dec 10"
+"xbacklight -dec 4"
  XF86MonBrightnessDown
+
+# Volume Up
+"amixer set Master 5%+"
+ XF86AudioRaiseVolume
+
+# Volume Down
+"amixer set Master 5%-"
+ XF86AudioLowerVolume
+
+
+# Volume Mute
+"amixer set Master toggle"
+ XF86AudioMute
