i3blocks scripts modified & ranger settings added

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -22,7 +22,6 @@ label=♪
 instance=Master
 interval=1
 signal=10
-command=/usr/share/i3blocks/volume 5 pulse
 
 
 [iface]
@@ -31,8 +30,8 @@ interval=30
 separator=false
 
 
-[dropbox]
-interval=3
+#[dropbox]
+#interval=3
 
 
 [time]
