--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # i3gaps
 for_window [class="^.*"] border pixel 2 
-#smart_gaps on
+smart_gaps on
 smart_borders on
 
 gaps inner 8 
